Оптимизация иконок для IE

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
         <div class="header__user-buttons">
           <div class="header__user-buttons-find">
             <a class="header__find-link" href="">
-              <img class="header__find-item" src="img/loupe.svg" width="17" height="17" alt="Окно поиска">
+              <div class="header__find-item" aria-label="Окно поиска"></div>
               </a>
               <div class="header__user-buttons--style">
                 <div class="header__find-field">
@@ -45,7 +45,8 @@
           </div>
           <div class="header__user-buttons-enter">
             <a class="header__enter-link" href="">
-                <img class="header__enter-item" src="img/entrance.svg" width="21" height="19" alt="Авторизация"> Вход
+                <div class="header__enter-item" aria-label="Авторизация"></div>
+                Вход
             </a>
             <div class="header__user-buttons--style">
               <div class="header__enter-field">
@@ -67,7 +68,7 @@
           </div>
           <div class="header__user-buttons-basket header__user-buttons-basket--full">
             <a class="header__basket-link" href="">
-              <img class="header__basket-item-full" src="img/basket-red.svg" width="21" height="20" alt="Корзина"> 2 товара
+                <div class="header__basket-item header__basket-item--full" aria-label="Корзина"></div>2 товара
             </a>
             <div class="header__user-buttons--style">
               <div class="basket-table">
