--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="header__user-buttons">
             <div class="header__user-buttons-find">
               <a class="header__find-link" href="">
-                <img class="header__find-item" src="img/loupe.svg" width="17" height="17" alt="Окно поиска">
+                <div class="header__find-item" aria-label="Окно поиска"></div>
               </a>
               <div class="header__user-buttons--style">
                 <div class="header__find-field">
@@ -42,7 +42,8 @@
             </div>
             <div class="header__user-buttons-enter">
               <a class="header__enter-link" href="">
-                  <img class="header__enter-item" src="img/entrance.svg" width="21" height="19" alt="Авторизация"> Вход
+                <div class="header__enter-item" aria-label="Авторизация"></div>
+                Вход
               </a>
               <div class="header__user-buttons--style">
                 <div class="header__enter-field">
@@ -64,7 +65,7 @@
             </div>
             <div class="header__user-buttons-basket">
               <a class="header__basket-link" href="">
-                <img class="header__basket-item" src="img/basket.svg" width="21" height="20" alt="Корзина"> Пусто
+                  <div class="header__basket-item" aria-label="Корзина"></div>Пусто
               </a>
             </div>
           </div>
