Подключила мини-стили и подправила теги, чтоб валидатор не ругался

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
       <header class="header">
@@ -32,7 +32,7 @@
         <div class="header__user-buttons">
           <div class="header__user-buttons-find">
             <a class="header__find-link" href="">
-              <div class="header__find-item" aria-label="Окно поиска"></div>
+              <div class="header__find-item"></div>
               </a>
               <div class="header__user-buttons--style">
                 <div class="header__find-field">
@@ -45,7 +45,7 @@
           </div>
           <div class="header__user-buttons-enter">
             <a class="header__enter-link" href="">
-                <div class="header__enter-item" aria-label="Авторизация"></div>
+                <div class="header__enter-item"></div>
                 Вход
             </a>
             <div class="header__user-buttons--style">
@@ -68,21 +68,21 @@
           </div>
           <div class="header__user-buttons-basket header__user-buttons-basket--full">
             <a class="header__basket-link" href="">
-                <div class="header__basket-item header__basket-item--full" aria-label="Корзина"></div>2 товара
+                <div class="header__basket-item header__basket-item--full"></div>2 товара
             </a>
             <div class="header__user-buttons--style">
               <div class="basket-table">
                 <form action="https://echo.htmlacademy.ru" method="post">
                   <table class="basket-table__content">
                     <tr class="basket-table__product">
-                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар"></a></td>
+                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href=""></a></td>
                       <td class="basket-table__product-image"><img src="img/mini__ice-cream__1.jpeg" width="33" height="33" alt="иконка мороженого"></td>
                       <td class="basket-table__product-name">Пломбир с апельсиновым джемом</td>
                       <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 200 руб.</span></td>
                       <td class="basket-table__product-cost">300 руб.</td>
                     </tr>
                     <tr class="basket-table__product">
-                        <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар"></a></td>
+                        <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href=""></a></td>
                         <td class="basket-table__product-image"><img src="img/mini__ice-cream__2.jpeg" width="33" height="33" alt="иконка мороженого"></td>
                         <td class="basket-table__product-name">Клубничный пломбир с присыпкой из белого шоколада</td>
                         <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 300 руб.</span></td>
@@ -355,5 +355,6 @@
           <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</span>
         </div>
       </footer>
+      <script src="js/script.min.js"></script>
     </body>
   </html>
