--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     </head>
   <body>
     <header class="header">
@@ -29,7 +29,7 @@
           <div class="header__user-buttons">
             <div class="header__user-buttons-find">
               <a class="header__find-link" href="">
-                <div class="header__find-item" aria-label="Окно поиска"></div>
+                <div class="header__find-item"></div>
               </a>
               <div class="header__user-buttons--style">
                 <div class="header__find-field">
@@ -42,7 +42,7 @@
             </div>
             <div class="header__user-buttons-enter">
               <a class="header__enter-link" href="">
-                <div class="header__enter-item" aria-label="Авторизация"></div>
+                <div class="header__enter-item"></div>
                 Вход
               </a>
               <div class="header__user-buttons--style">
@@ -65,7 +65,7 @@
             </div>
             <div class="header__user-buttons-basket">
               <a class="header__basket-link" href="">
-                  <div class="header__basket-item" aria-label="Корзина"></div>Пусто
+                  <div class="header__basket-item"></div>Пусто
               </a>
             </div>
           </div>
@@ -108,19 +108,19 @@
         <div class="carousel">
           <input class="product-1 visually-hidden input__radio input" type="radio" id="product-1" name="toggle" checked>
           <div class="carousel__slide">
-            <img src="img/carousel__1.png" height="584" alt="Фото мороженки">
+            <img src="img/carousel__1.png" height="584" width="642" alt="Фото мороженки">
             <h2>Крем-брюле и пломбир<br>с малиновым джемом</h2>
             <a class="full-basket button" href="">Давайте оба!</a>
           </div>
           <input class="product-2 visually-hidden input__radio input" type="radio" id="product-2" name="toggle">
           <div class="carousel__slide">
-            <img src="img/carousel__2.png" height="584" alt="Фото мороженки">
+            <img src="img/carousel__2.png" height="584" width="642" alt="Фото мороженки">
             <h2>Шоколадный пломбир и<br>лимонный сорбет</h2>
             <a class="full-basket button" href="">Давайте оба!</a>
           </div>
           <input class="product-3 visually-hidden input__radio input" type="radio" id="product-3" name="toggle">
           <div class="carousel__slide">
-            <img src="img/carousel__3.png" height="584" alt="Фото мороженки">
+            <img src="img/carousel__3.png" height="584" width="642" alt="Фото мороженки">
             <h2>Пломбир с помадкой и<br>клубничный щербет</h2>
             <a class="full-basket button" href="">Давайте оба!</a>
           </div>
@@ -339,6 +339,6 @@
           <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</span>
         </div>
       </footer>
-      <script src="js/script.js"></script>
+      <script src="js/script.min.js"></script>
     </body>
   </html>
