Добавила крестик закрытия в форму обратной связи, обновила мини стили

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <div class="call-back">
         <div class="call-back__window">
           <form>
+            <a class="call-back__delete-link" href=""></a>
             <p class="call-back__text">Мы обязательно вам ответим!</p>
             <label class="visually-hidden" for="username">Введите имя</label>
             <input class="call-back__input input" type="text" name="username" id="username" placeholder="Как вас зовут?" required>
