--- a/index.html
+++ b/index.html
@@ -308,19 +308,19 @@
       <h5 class="visually-hidden">Наши аккаунты в соцсетях</h5>
       <ul class="social-links">
         <li class="social-links__item">
-          <a class="social-links__link" href="">
+          <a class="social-links__link" href="" aria-label="Твиттер">
           <img src="img/twitter.svg" width="32" height="32" alt="Твиттер"></a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="">
+          <a class="social-links__link" href="" aria-label="Инстаграм">
           <img src="img/instagram.svg" width="32" height="32" alt="Инстаграм"></a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="">
+          <a class="social-links__link" href="" aria-label="Фейсбук">
           <img src="img/fb.svg" width="32" height="32" alt="Фейсбук"></a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="">
+          <a class="social-links__link" href=""  aria-label="Вконтакте">
           <img src="img/vk.svg" width="32" height="32" alt="Вконтакте"></a>
         </li>
       </ul>
