--- a/catalog.html
+++ b/catalog.html
@@ -173,7 +173,7 @@
               <span class="catalog-item__weight">/кг</span>
             </div>
           </div>
-          <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
+          <h3 class="catalog-item__title"><a class="catalog-item__title-link" href="">Сливочное с апельсиновым джемом и цитрусовой стружкой Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
           <a class="catalog-item__hover-button button" href="">Быстрый просмотр</a>
         </li>
         <li class="catalog__item catalog-item">
