--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="header__logo" href="index.html">
+        <a class="header__logo" href="index.html" aria-label="Перейти на главную страницу">
           <img class="header__logo-item" src="img/logo.svg" width="154" height="64" alt="Логотип магазина «Глейси»">
         </a>
         <ul class="header__menu">
@@ -31,7 +31,7 @@
         </ul>
         <div class="header__user-buttons">
           <div class="header__user-buttons-find">
-            <a class="header__find-link" href="">
+            <a class="header__find-link" href="" aria-label="Поиск по сайту">
               <div class="header__find-item"></div>
             </a>
             <div class="header__user-buttons--style">
@@ -75,14 +75,14 @@
                 <form action="https://echo.htmlacademy.ru" method="post">
                   <table class="basket-table__content">
                     <tr class="basket-table__product">
-                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href=""></a></td>
+                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар из корзины"></a></td>
                       <td class="basket-table__product-image"><img src="img/mini__ice-cream__1.jpeg" width="33" height="33" alt="иконка мороженого"></td>
                       <td class="basket-table__product-name">Пломбир с апельсиновым джемом</td>
                       <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 200 руб.</span></td>
                       <td class="basket-table__product-cost">300 руб.</td>
                     </tr>
                     <tr class="basket-table__product">
-                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href=""></a></td>
+                      <td class="basket-table__product-delete"><a class="basket-table__product-delete-link" href="" aria-label="Удалить товар из корзины"></a></td>
                       <td class="basket-table__product-image"><img src="img/mini__ice-cream__2.jpeg" width="33" height="33" alt="иконка мороженого"></td>
                       <td class="basket-table__product-name">Клубничный пломбир с присыпкой из белого шоколада</td>
                       <td class="basket-table__product-weight">1,5 кг <span class="basket-table__product-price">х 300 руб.</span></td>
@@ -321,19 +321,19 @@
       <h5 class="visually-hidden">Наши аккаунты в соцсетях</h5>
       <ul class="social-links">
         <li class="social-links__item">
-          <a class="social-links__link" href="" aria-label="Твиттер">
+          <a class="social-links__link" href="" aria-label="Перейти в Твиттер">
           <img src="img/twitter.svg" width="32" height="32" alt="Твиттер"></a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="" aria-label="Инстаграм">
+          <a class="social-links__link" href="" aria-label="Перейти в Инстаграм">
           <img src="img/instagram.svg" width="32" height="32" alt="Инстаграм"></a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="" aria-label="Фейсбук">
+          <a class="social-links__link" href="" aria-label="Перейти в Фейсбук">
           <img src="img/fb.svg" width="32" height="32" alt="Фейсбук"></a>
         </li>
         <li class="social-links__item">
-          <a class="social-links__link" href="" aria-label="Вконтакте">
+          <a class="social-links__link" href="" aria-label="Перейти во Вконтакте">
           <img src="img/vk.svg" width="32" height="32" alt="Вконтакте"></a>
         </li>
       </ul>
@@ -358,10 +358,10 @@
       </div>
       <h6 class="visually-hidden">Разработчики нашего сайта</h6>
       <div>
-        <a class="footer__developer__logo" href="https://htmlacademy.ru/intensive/htmlcss">
+        <a class="footer__developer__logo" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
           <img src="img/logo-htmlacademy.svg" width="109" height="38" alt="Логотип разработчика">
         </a>
-        <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</span>
+        <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">HTML Academy</a> © 2017</span>
       </div>
     </footer>
     <script src="js/script.min.js"></script>
