--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
         <div class="header__user-buttons">
           <div class="header__user-buttons-find">
-            <a class="header__find-link" href="">
+            <a class="header__find-link" href="" aria-label="Поиск по сайту">
               <div class="header__find-item"></div>
             </a>
             <div class="header__user-buttons--style">
@@ -266,10 +266,10 @@
     <section class="articles__stock">
       <div class="article">
         <div class="article__content">
-          <a class="article__rubric" href="">
+          <a class="article__rubric" href="" aria-label="Название рубрики">
             Новое в нашем блоге
           </a>
-          <a class="article__title" href="">
+          <a class="article__title" href="" aria-label="Заголовок статьи">
             10 способов сервировки
             фруктовых щербетов к
             столу
@@ -345,10 +345,10 @@
       </div>
       <h6 class="visually-hidden">Разработчики нашего сайта</h6>
       <div>
-        <a class="footer__developer__logo" href="https://htmlacademy.ru/intensive/htmlcss">
+        <a class="footer__developer__logo" href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">
           <img src="img/logo-htmlacademy.svg" width="109" height="38" alt="Логотип разработчика">
         </a>
-        <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</span>
+        <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss" aria-label="Перейти на сайт разработчика">HTML Academy</a> © 2017</span>
       </div>
     </footer>
     <script src="js/script.min.js"></script>
